# lop

./: .gitignore  CMakeLists.txt  README.md  package.json
assets/: babyroom.tmj  dead.tmj  dialog.tmj  dungeon1.tmj  main.tmj  sprites.tsj  title.tmj  welcome_island.tmj
assets/rfx/: activate.rfx  coin.rfx  hurt.rfx  stev.rfx
docs/: index.html  lop.mjs  lop.wasm  map_tester.mjs  map_tester.wasm
src/: adventure.h  adventure_map.h  adventure_old.h  adventure_old2.h  characters.h  ll_animation_queue.h  ll_sound.h  main.c  pntr_tiled.h
