CMAKE_MINIMUM_REQUIRED(VERSION 3.18)
PROJECT(lop)

INCLUDE(FetchContent)

IF (POLICY CMP0135)
  CMAKE_POLICY(SET CMP0135 NEW)
  SET(CMAKE_POLICY_DEFAULT_CMP0135 NEW)
ENDIF()

# SET(CMAKE_BUILD_TYPE Debug)

IF (CMAKE_BUILD_TYPE STREQUAL "Debug")
    MESSAGE(STATUS "Building in Debug mode.")
    ADD_DEFINITIONS(-DDEBUG_MODE)
    SET(CMAKE_C_FLAGS_DEBUG "-g -O0")
ENDIF()

FETCHCONTENT_DECLARE(pntr URL https://github.com/RobLoach/pntr/archive/refs/heads/master.zip)
FETCHCONTENT_MAKEAVAILABLE(pntr)

FETCHCONTENT_DECLARE(pntr_app URL https://github.com/RobLoach/pntr_app/archive/refs/heads/master.zip)
FETCHCONTENT_MAKEAVAILABLE(pntr_app)

FETCHCONTENT_DECLARE(pntr_tiled URL https://github.com/RobLoach/pntr_tiled/archive/refs/heads/master.zip)
FETCHCONTENT_MAKEAVAILABLE(pntr_tiled)

FETCHCONTENT_DECLARE(pntr_app_sfx URL https://github.com/konsumer/pntr_app_sfx/archive/refs/heads/main.zip)
FETCHCONTENT_MAKEAVAILABLE(pntr_app_sfx)

FILE(GLOB SRC_FILES src/*.c)
ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} pntr pntr_app pntr_tiled)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${pntr_app_sfx_SOURCE_DIR})


IF (EMSCRIPTEN)
  ADD_COMPILE_DEFINITIONS(PNTR_APP_WEB)
  SET(CMAKE_EXECUTABLE_SUFFIX ".mjs")
  TARGET_LINK_OPTIONS(${PROJECT_NAME} PRIVATE -sASSERTIONS=1 -sASYNCIFY --embed-file ${CMAKE_SOURCE_DIR}/assets@/assets)
  ADD_CUSTOM_COMMAND(
    TARGET ${PROJECT_NAME}
    POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy "$<TARGET_FILE_DIR:${PROJECT_NAME}>/${PROJECT_NAME}.wasm" "${CMAKE_SOURCE_DIR}/docs/${PROJECT_NAME}.wasm"
    COMMAND ${CMAKE_COMMAND} -E copy "$<TARGET_FILE_DIR:${PROJECT_NAME}>/${PROJECT_NAME}.mjs" "${CMAKE_SOURCE_DIR}/docs/${PROJECT_NAME}.mjs"
  )
ELSE()
  ADD_COMPILE_DEFINITIONS(PNTR_APP_RAYLIB)
  FETCHCONTENT_DECLARE(raylib URL https://github.com/raysan5/raylib/archive/refs/tags/5.5.zip)
  FETCHCONTENT_MAKEAVAILABLE(raylib)
  TARGET_LINK_LIBRARIES(${PROJECT_NAME} raylib)
ENDIF()